fix(color-picker): Adjust component spacing

--- a/packages/calcite-components/src/components/color-picker/color-picker.scss
+++ b/packages/calcite-components/src/components/color-picker/color-picker.scss
@@ -158,4 +158,8 @@
   display: flex;
 }
 
+.swatch-group {
+  margin-block-start: var(--calcite-spacing-md);
+}
+
 @include base-component();
